--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "strictNullChecks": true,
     "skipLibCheck": true,
     "target": "es2015",
+    "jsx": "react",
     "types": []
   },
   "include": ["src/*"]
