--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@jupyterlab/application": "^1.0.0-alpha.6",
-    "@jupyterlab/apputils": "^1.0.0-alpha.6",
-    "@jupyterlab/coreutils": "3.0.0-alpha.6",
+    "@jupyterlab/application": "^1.0.2",
+    "@jupyterlab/apputils": "^1.0.2",
+    "@jupyterlab/coreutils": "^3.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   },
