--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf lib",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "test": "mocha"
   },
   "dependencies": {
     "@jupyterlab/application": "^1.0.2",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/react": "~16.4.13",
     "@types/react-dom": "~16.0.7",
+    "mocha": "^6.2.0",
     "rimraf": "^2.6.1",
     "typescript": "~3.3.1"
   },
