Explicit conda home, config changes and quiet installs

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ sudo: false
 before_install:
   - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda3/bin:$PATH
-  - conda update --yes conda
-  - conda create --yes -n travis python=3.7
+  - ./miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda create -q -n travis python=3.7
   - conda activate travis
 
 matrix:
@@ -24,7 +25,7 @@ matrix:
       env: BUILD_LANG=node_js
       install:
         - npm install mocha
-        - conda install jupyter-lab -y
+        - conda install jupyter-lab
       script:
         - jlpm build
         - jlpm test
