--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ before_install:
   - export PATH="$HOME/miniconda/bin:$PATH"
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
+  - conda init bash
   - conda create -q -n travis python=3.7
   - conda activate travis
+  - conda info -a
 
 matrix:
   include:
