Add license to packages

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ recursive-include jupyterlab_nvdashboard *.py
 
 include setup.py
 include README.md
+include LICENSE.txt
 include requirements.txt
 include MANIFEST.in
 include package.json
