--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -20,13 +20,13 @@ requirements:
     - python >=3
     - setuptools
     - jupyter-server-proxy
-    - bokeh
+    - bokeh <2
     - pynvml
     - psutil
   run:
     - python >=3
     - jupyter-server-proxy
-    - bokeh
+    - bokeh <2
     - pynvml
     - psutil
 
