Upgrade to support Jupyter Lab 3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,23 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "composite": true,
     "declaration": true,
-    "lib": ["es2015", "dom"],
-    "module": "commonjs",
+    "esModuleInterop": true,
+    "incremental": true,
+    "jsx": "react",
+    "module": "esnext",
     "moduleResolution": "node",
     "noEmitOnError": true,
+    "noImplicitAny": true,
     "noUnusedLocals": true,
+    "preserveWatchOutput": true,
+    "resolveJsonModule": true,
     "outDir": "lib",
     "rootDir": "src",
     "strict": true,
-    "strictNullChecks": true,
-    "skipLibCheck": true,
-    "target": "es2015",
-    "jsx": "react",
+    "strictNullChecks": false,
+    "target": "es2017",
     "types": []
   },
   "include": ["src/*"]
