Update package meta

--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     - setuptools
     - pynvml
     - psutil
+    - jupyter-packaging
   run:
     - python >=3.5
     - jupyterlab >=2.0
