--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -17,19 +17,19 @@ build:
 
 requirements:
   build:
-    - python >=3.5
+    - python >=3.6
     - setuptools
     - pynvml
     - psutil
-    - jupyter-packaging
+    - nodejs
+    - jupyter-packaging >=0.7.0,<0.8
   run:
-    - python >=3.5
-    - jupyterlab >=2.0
-    - jupyter-server-proxy
+    - python >=3.6
+    - jupyterlab >=3.0.0
+    - jupyter-server-proxy >=1.3.2
     - bokeh >2.1
     - pynvml
     - psutil
-    - nodejs
 
 
 test:
