--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -16,7 +16,7 @@ build:
   noarch: python
 
 requirements:
-  build:
+  host:
     - python >=3.6
     - setuptools
     - pynvml
@@ -25,7 +25,7 @@ requirements:
     - jupyter-packaging >=0.7.0,<0.8
   run:
     - python >=3.6
-    - jupyterlab >=3.0.0
+    - jupyterlab >=3.0.0,<4
     - jupyter-server-proxy >=1.3.2
     - bokeh >2.1
     - pynvml
