Upgrade to support Jupyter Lab 3 (#85)
* Upgrade to support Jupyter Lab 3

* Undo some changes and run black

* Update CI scripts

* Update CI

* Unpin nodejs

* Bump node version

* Update package meta

* Align conda meta with Dask labextension

* upgrade jupyterlab to v3

* Update CI with new packaging commands

* update CI scripts to follow PEP 440 versioning

* fix lint errors

* comment out serverextension check

* Apply suggestions from code review

Co-authored-by: jakirkham <jakirkham@gmail.com>

* Drop Python 3.6

* Drop serverextension check

* Drop browsercheck test

* Add file tests

* Enable editable install as described in README

* rm conda installs

Co-authored-by: AJ Schmidt <aschmidt@nvidia.com>
Co-authored-by: jakirkham <jakirkham@gmail.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,24 @@
-recursive-include jupyterlab_nvdashboard *.py
-
-include setup.py
+include LICENSE
 include README.md
-include LICENSE.txt
-include requirements.txt
-include MANIFEST.in
-include package.json
+include pyproject.toml
+include jupyter-config/jupyterlab_nvdashboard.json
 
-recursive-exclude * __pycache__
+include package.json
+include install.json
+include ts*.json
+include requirements.txt
+
+graft jupyterlab_nvdashboard/labextension
+
+# Javascript files
+graft src
+graft style
+prune **/node_modules
+prune lib
+
+# Patterns to exclude from any directory
+global-exclude *~
+global-exclude *.pyc
+global-exclude *.pyo
+global-exclude .git
+global-exclude .ipynb_checkpoints
