--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -1,7 +1,7 @@
 {% set version = environ.get('GIT_DESCRIBE_TAG', '0.0.0.dev').lstrip('v') + environ.get('VERSION_SUFFIX', '') %}
 {% set minor_version =  version.split('.')[0] + '.' + version.split('.')[1] %}
 {% set git_revision_count=environ.get('GIT_DESCRIBE_NUMBER', 0) %}
-{% set py_version=environ.get('CONDA_PY', 36) %}
+{% set py_version=environ.get('CONDA_PY', 37) %}
 
 package:
   name: jupyterlab-nvdashboard
@@ -16,24 +16,28 @@ build:
   noarch: python
 
 requirements:
-  build:
-    - python >=3.5
+  host:
+    - python >=3.7
     - setuptools
     - pynvml
     - psutil
+    - nodejs
+    - jupyter-packaging >=0.7.0,<0.8
   run:
-    - python >=3.5
-    - jupyterlab >=2.0
-    - jupyter-server-proxy
+    - python >=3.7
+    - jupyterlab >=3.0.0,<4
+    - jupyter-server-proxy >=1.3.2
     - bokeh >2.1
     - pynvml
     - psutil
-    - nodejs
 
 
 test:
   imports:
     - jupyterlab_nvdashboard
+  commands:
+    - test -f ${PREFIX}/share/jupyter/labextensions/jupyterlab-nvdashboard/package.json                              # [unix]
+    - if exist %PREFIX%\\share\\jupyter\\labextensions\\jupyterlab-nvdashboard\\package.json (exit 0) else (exit 1)  # [win]
 
 about:
   home: https://rapids.ai
