--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - pynvml
     - psutil
     - nodejs
+    - jupyter-packaging >=0.7.0,<0.8
   run:
     - python >=3.7
     - jupyterlab >=3.0.0,<4
