Pass compiler environment variables to conda python build
Signed-off-by: Jordan Jacobelli <jjacobelli@nvidia.com>

--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -14,6 +14,10 @@ build:
   number: {{ git_revision_count }}
   script: python -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
   noarch: python
+  script_env:
+    - CC
+    - CXX
+    - CUDAHOSTCXX
 
 requirements:
   host:
