Add `nodejs` version specification to conda recipe (#113)
* whitespace. test build

* fix build errors

--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - setuptools
     - pynvml
     - psutil
-    - nodejs
+    - nodejs !=16.10.0
     - jupyter-packaging >=0.7.0,<0.8
   run:
     - python >=3.7
