Move date to build string in `conda` recipe
This PR moves the date string from the version to the build string for conda recipes in this repository.

This is necessary to ensure that the conda packages resulting from PR builds can be installed in the same environment as nightly conda packages. This is useful for testing purposes.

Additionally, this PR adds the `PKG_HASH` value to our build string. This value is a hash computed from the dependency names and versions used to build our packages.

Typically the `PKG_HASH` value is included in packages when the build string is omitted, as seen on most `conda-forge` packages.

Including it in our build string will help ensure that new packages are published whenever our dependencies change (which is important in the case of shared library updates).

xref: https://github.com/rapidsai/rmm/pull/1195

--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -1,7 +1,7 @@
-{% set version = environ.get('GIT_DESCRIBE_TAG', '0.0.0.dev').lstrip('v') + environ.get('VERSION_SUFFIX', '') %}
+{% set version = environ.get('GIT_DESCRIBE_TAG', '0.0.0.dev').lstrip('v') %}
 {% set minor_version =  version.split('.')[0] + '.' + version.split('.')[1] %}
-{% set git_revision_count=environ.get('GIT_DESCRIBE_NUMBER', 0) %}
 {% set py_version=environ.get('CONDA_PY', 37) %}
+{% set date_string = environ['RAPIDS_DATE_STRING'] %}
 
 package:
   name: jupyterlab-nvdashboard
@@ -11,7 +11,8 @@ source:
   path: ../../..
 
 build:
-  number: {{ git_revision_count }}
+  number: {{ GIT_DESCRIBE_NUMBER }}
+  string: py_{{ date_string }}_h{{ PKG_HASH }}_{{ GIT_DESCRIBE_HASH }}_{{ GIT_DESCRIBE_NUMBER }}
   script: python -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
   noarch: python
   script_env:
