--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - python >=3.7
     - jupyterlab >=3.0.0,<4
     - jupyter-server-proxy >=1.3.2
-    - bokeh >2.1
+    - bokeh >2.1,<3
     - pynvml
     - psutil
 
