--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "composite": true,
     "declaration": true,
     "esModuleInterop": true,
     "incremental": true,
@@ -16,9 +15,8 @@
     "outDir": "lib",
     "rootDir": "src",
     "strict": true,
-    "strictNullChecks": false,
-    "target": "es2017",
-    "types": []
+    "strictNullChecks": true,
+    "target": "ES2018"
   },
-  "include": ["src/*"]
+  "include": ["src/*", "src/assets/svg.d.ts"]
 }
