--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -24,12 +24,13 @@ requirements:
     - setuptools
     - pynvml
     - psutil
-    - nodejs !=16.10.0
-    - jupyter-packaging >=0.7.0,<0.8
+    - nodejs =18
+    - hatchling
+    - hatch-nodejs-version
+    - hatch-jupyter-builder
   run:
     - python >=3.7
-    - jupyterlab >=3.0.0,<4
-    - jupyter-server-proxy >=1.3.2
+    - jupyterlab >=4
     - pynvml
     - psutil
 
