building conda package requires jlab>4

--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -26,6 +26,7 @@ requirements:
     - hatchling
     - hatch-nodejs-version
     - hatch-jupyter-builder
+    - jupyterlab >=4
   run:
     - python >=3.7
     - jupyterlab >=4
