fix naming for python package

--- a/conda/recipes/jupyterlab-nvdashboard/meta.yaml
+++ b/conda/recipes/jupyterlab-nvdashboard/meta.yaml
@@ -36,7 +36,7 @@ requirements:
 
 test:
   imports:
-    - jupyterlab-nvdashboard
+    - jupyterlab_nvdashboard
 
 about:
   home: https://rapids.ai
