--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
-requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version"]
+requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
 build-backend = "hatchling.build"
 
 [project]
-name = "jupyterlab-nvdashboard"
+name = "jupyterlab_nvdashboard"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.8"
@@ -20,6 +20,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
     "jupyter_server>=2.0.1,<3",
@@ -35,25 +36,25 @@ source = "nodejs"
 fields = ["description", "authors", "urls"]
 
 [tool.hatch.build.targets.sdist]
-artifacts = ["jupyterlab-nvdashboard/labextension"]
+artifacts = ["jupyterlab_nvdashboard/labextension"]
 exclude = [".github", "binder"]
 
 [tool.hatch.build.targets.wheel.shared-data]
-"jupyterlab-nvdashboard/labextension" = "share/jupyter/labextensions/jupyterlab-nvdashboard"
+"jupyterlab_nvdashboard/labextension" = "share/jupyter/labextensions/jupyterlab-nvdashboard"
 "install.json" = "share/jupyter/labextensions/jupyterlab-nvdashboard/install.json"
 "jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
 
 [tool.hatch.build.hooks.version]
-path = "jupyterlab-nvdashboard/_version.py"
+path = "jupyterlab_nvdashboard/_version.py"
 
 [tool.hatch.build.hooks.jupyter-builder]
 dependencies = ["hatch-jupyter-builder>=0.5"]
 build-function = "hatch_jupyter_builder.npm_builder"
 ensured-targets = [
-    "jupyterlab-nvdashboard/labextension/static/style.js",
-    "jupyterlab-nvdashboard/labextension/package.json",
+    "jupyterlab_nvdashboard/labextension/static/style.js",
+    "jupyterlab_nvdashboard/labextension/package.json",
 ]
-skip-if-exists = ["jupyterlab-nvdashboard/labextension/static/style.js"]
+skip-if-exists = ["jupyterlab_nvdashboard/labextension/static/style.js"]
 
 [tool.hatch.build.hooks.jupyter-builder.build-kwargs]
 build_cmd = "build:prod"
@@ -63,7 +64,7 @@ npm = ["jlpm"]
 build_cmd = "install:extension"
 npm = ["jlpm"]
 source_dir = "src"
-build_dir = "jupyterlab-nvdashboard/labextension"
+build_dir = "jupyterlab_nvdashboard/labextension"
 
 [tool.jupyter-releaser.options]
 version_cmd = "hatch version"
