--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -26,8 +26,9 @@ jobs:
     container:
       image: rapidsai/ci-conda:latest
       env:
-        RAPIDS_BUILD_TYPE: ${{ inputs.build_type }}
+        RAPIDS_BUILD_TYPE: branch
         PARALLEL_LEVEL: ${{ env.PARALLEL_LEVEL }}
+        NVIDIA_VISIBLE_DEVICES: ${{ env.NVIDIA_VISIBLE_DEVICES }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -53,8 +54,9 @@ jobs:
     container:
       image: rapidsai/ci-wheel:latest
       env:
-        RAPIDS_BUILD_TYPE: ${{ inputs.build_type }}
+        RAPIDS_BUILD_TYPE: branch
         PARALLEL_LEVEL: ${{ env.PARALLEL_LEVEL }}
+        NVIDIA_VISIBLE_DEVICES: ${{ env.NVIDIA_VISIBLE_DEVICES }}
     steps:
       - uses: actions/checkout@v3
         with:
