--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -32,65 +32,122 @@ jobs:
   pr-builder:
     needs:
       - checks
-      - conda-python-build-tests
-      - wheel-build-test
+      - conda-python-build
+      - conda-python-tests
+      - wheel-build
+      - wheel-tests
     secrets: inherit
     uses: rapidsai/shared-workflows/.github/workflows/pr-builder.yaml@branch-24.02
   checks:
     secrets: inherit
     uses: rapidsai/shared-workflows/.github/workflows/checks.yaml@branch-24.02
-  conda-python-build-tests:
+  conda-python-build:
     needs: checks
-    runs-on: "linux-amd64-gpu-v100-latest-1"
+    runs-on: "linux-amd64-cpu8"
     container:
       image: rapidsai/ci-conda:latest
       env:
-        RAPIDS_BUILD_TYPE: branch
+        RAPIDS_BUILD_TYPE: pull-request
         PARALLEL_LEVEL: ${{ env.PARALLEL_LEVEL }}
-        NVIDIA_VISIBLE_DEVICES: ${{ env.NVIDIA_VISIBLE_DEVICES }}
     steps:
+      - uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
+          aws-region: ${{ vars.AWS_REGION }}
+          role-duration-seconds: 43200 # 12h
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Standardize repository information
         run: |
-          echo "RAPIDS_REPOSITORY=${{ inputs.repo || github.repository }}" >> "${GITHUB_ENV}"
+          echo "RAPIDS_REPOSITORY=${{ github.repository }}" >> "${GITHUB_ENV}"
           echo "RAPIDS_SHA=$(git rev-parse HEAD)" >> "${GITHUB_ENV}"
-          echo "RAPIDS_REF_NAME=${{ inputs.branch || github.ref_name }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_NIGHTLY_DATE=${{ inputs.date }}" >> "${GITHUB_ENV}"
+          echo "RAPIDS_REF_NAME=${{ github.ref_name }}" >> "${GITHUB_ENV}"
+          echo "RAPIDS_NIGHTLY_DATE=" >> "${GITHUB_ENV}"
       - name: Python build
         run: ci/build_python.sh
         env:
           GH_TOKEN: ${{ github.token }}
-      - name: Python test
-        run: ci/test_python.sh
-        env:
-          GH_TOKEN: ${{ github.token }}
-
-  wheel-build-test:
-    needs: checks
+  conda-python-tests:
+    needs: conda-python-build
     runs-on: "linux-amd64-gpu-v100-latest-1"
     container:
-      image: rapidsai/ci-wheel:latest
+      image: rapidsai/ci-conda:latest
       env:
-        RAPIDS_BUILD_TYPE: branch
+        RAPIDS_BUILD_TYPE: pull-request
         PARALLEL_LEVEL: ${{ env.PARALLEL_LEVEL }}
         NVIDIA_VISIBLE_DEVICES: ${{ env.NVIDIA_VISIBLE_DEVICES }}
     steps:
+      - uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
+          aws-region: ${{ vars.AWS_REGION }}
+          role-duration-seconds: 43200 # 12h
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Standardize repository information
         run: |
-          echo "RAPIDS_REPOSITORY=${{ inputs.repo || github.repository }}" >> "${GITHUB_ENV}"
+          echo "RAPIDS_REPOSITORY=${{ github.repository }}" >> "${GITHUB_ENV}"
           echo "RAPIDS_SHA=$(git rev-parse HEAD)" >> "${GITHUB_ENV}"
-          echo "RAPIDS_REF_NAME=${{ inputs.branch || github.ref_name }}" >> "${GITHUB_ENV}"
-          echo "RAPIDS_NIGHTLY_DATE=${{ inputs.date }}" >> "${GITHUB_ENV}"
+          echo "RAPIDS_REF_NAME=${{ github.ref_name }}" >> "${GITHUB_ENV}"
+          echo "RAPIDS_NIGHTLY_DATE=" >> "${GITHUB_ENV}"
+      - name: Python tests
+        run: ci/test_python.sh
+        env:
+          GH_TOKEN: ${{ github.token }}
+  wheel-build:
+    needs: checks
+    runs-on: "linux-amd64-cpu8"
+    container:
+      image: rapidsai/ci-wheel:latest
+      env:
+        RAPIDS_BUILD_TYPE: pull-request
+        PARALLEL_LEVEL: ${{ env.PARALLEL_LEVEL }}
+    steps:
+      - uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
+          aws-region: ${{ vars.AWS_REGION }}
+          role-duration-seconds: 43200 # 12h
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Standardize repository information
+        run: |
+          echo "RAPIDS_REPOSITORY=${{ github.repository }}" >> "${GITHUB_ENV}"
+          echo "RAPIDS_SHA=$(git rev-parse HEAD)" >> "${GITHUB_ENV}"
+          echo "RAPIDS_REF_NAME=${{ github.ref_name }}" >> "${GITHUB_ENV}"
+          echo "RAPIDS_NIGHTLY_DATE=" >> "${GITHUB_ENV}"
       - name: Python build
         run: ci/build_wheel.sh
         env:
           GH_TOKEN: ${{ github.token }}
-      - name: Python test
+  wheel-tests:
+    needs: wheel-build
+    runs-on: "linux-amd64-gpu-v100-latest-1"
+    container:
+      image: rapidsai/ci-wheel:latest
+      env:
+        RAPIDS_BUILD_TYPE: pull-request
+        PARALLEL_LEVEL: ${{ env.PARALLEL_LEVEL }}
+        NVIDIA_VISIBLE_DEVICES: ${{ env.NVIDIA_VISIBLE_DEVICES }}
+    steps:
+      - uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
+          aws-region: ${{ vars.AWS_REGION }}
+          role-duration-seconds: 43200 # 12h
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Standardize repository information
+        run: |
+          echo "RAPIDS_REPOSITORY=${{ github.repository }}" >> "${GITHUB_ENV}"
+          echo "RAPIDS_SHA=$(git rev-parse HEAD)" >> "${GITHUB_ENV}"
+          echo "RAPIDS_REF_NAME=${{ github.ref_name }}" >> "${GITHUB_ENV}"
+          echo "RAPIDS_NIGHTLY_DATE=" >> "${GITHUB_ENV}"
+      - name: Python tests
         run: ci/test_wheel.sh
         env:
           GH_TOKEN: ${{ github.token }}
