--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,13 +27,16 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  python-build:
+  conda-python-build:
     secrets: inherit
-    uses: ./.github/workflows/conda-build.yaml
+    uses: rapidsai/shared-workflows/.github/workflows/conda-python-build.yaml@branch-24.02
     with:
       build_type: ${{ inputs.build_type || 'branch' }}
+      branch: ${{ inputs.branch }}
+      date: ${{ inputs.date }}
+      sha: ${{ inputs.sha }}
   upload-conda:
-    needs: [python-build]
+    needs: [conda-python-build]
     secrets: inherit
     uses: rapidsai/shared-workflows/.github/workflows/conda-upload-packages.yaml@branch-24.02
     with:
@@ -43,9 +46,15 @@ jobs:
       sha: ${{ inputs.sha }}
   wheel-build:
     secrets: inherit
-    uses: ./.github/workflows/wheel-build.yaml
+    uses: rapidsai/shared-workflows/.github/workflows/wheels-build.yaml@branch-24.02
     with:
       build_type: ${{ inputs.build_type || 'branch' }}
+      branch: ${{ inputs.branch }}
+      sha: ${{ inputs.sha }}
+      date: ${{ inputs.date }}
+      script: ci/build_wheel.sh
+      # Package is pure Python and only ever requires one build.
+      matrix_filter: 'map(select((.LINUX_VER | test("centos")|not))) | sort_by((.PY_VER | split(".") | map(tonumber))) | .[-1] + {ARCH: "amd64"}'
   wheel-publish:
     needs: wheel-build
     secrets: inherit
